force-app/main/default/objects/Universal_Grid_Output__c/Universal_Grid_Output__c.object-meta.xml
<CustomObject>
    <description>The object to capture the UG Discounts for Open Offer Categories which will be printed on the Open Offer welcome package output.</description>
    <label>Universal Grid Output</label>
    <nameField>
        <label>Universal Grid Output Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Universal Grid Outputs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>