force-app/main/default/objects/Universal_Grid_Output__c/fields/Agreement__c.field-meta.xml
<CustomField>
    <fullName>Agreement__c</fullName>
    <description>The Agreement that is associated with the Open Offer UG Discounts.</description>
    <label>Agreement</label>
    <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
    <relationshipLabel>Universal Grid Outputs</relationshipLabel>
    <relationshipName>Universal_Grid_Outputs</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>