force-app/main/default/objects/Universal_Grid_Output__c/fields/Open_Offer_Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Open_Offer_Product_Category__c</fullName>
    <businessOwnerUser></businessOwnerUser>
    <description>The field to determine the Open Offer Product Category corresponding to the UG discounts.</description>
    <formula>TEXT(Pricing_Discount_Tier__r.Open_Offer_Product_Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open Offer Product Category</label>
    <type>Text</type>
</CustomField>