force-app/main/default/objects/Universal_Grid_Output__c/fields/UG_Discount__c.field-meta.xml
<CustomField>
    <fullName>UG_Discount__c</fullName>
    <businessOwnerUser></businessOwnerUser>
    <description>The object to capture the UG Discounts for Open Offer Categories which will be printed on the Open Offer welcome package output.</description>
    <formula>Pricing_Discount_Tier__r.Discount_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UG Discount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>